force-app/main/default/objects/Question_Response__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <referenceTo>Options__c</referenceTo>
    <relationshipLabel>Questions Response</relationshipLabel>
    <relationshipName>Questions_Response</relationshipName>
    <type>Lookup</type>
</CustomField>