force-app/main/default/objects/Question_Response__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Questions Response</relationshipLabel>
    <relationshipName>Questions_Response</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>